--- a/TraversalProject/Views/Shared/Components/_CommentList/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_CommentList/Default.cshtml
@@ -1,25 +1,25 @@
 ﻿@model List<Comment>
 
 <div class="comments mt-5">
-    <h4 class="side-title ">Yorumlar (2)</h4>
+    <h4 class="side-title ">Yorumlar (@ViewBag.commentCount)</h4>
     @foreach (var item in Model)
     {
         <div class="media mt-4">
             <div class="img-circle">
-                <img src="~/Traversal-Liberty/assets/images/c1.jpg" class="img-fluid" alt="...">
+                <img src="~/UserImages/@item.AppUser.ImageURL" class="img-fluid" alt="...">
             </div>
             <div class="media-body">
 
                 <ul class="time-rply mb-2">
                     <li>
-                        <a href="#URL" class="name mt-0 mb-2 d-block">@item.CommentUser</a>
-                        @item.CommentDate.ToShortDateString()
+                        <a href="#URL" class="name mt-0 mb-2 d-block">@item.AppUser.Name @item.AppUser.Surname</a>
+                        @(((DateTime)item.CommentDate).ToString("dd-MMM-yyyy"))
 
                     </li>
                     <li class="reply-last">
-                        <a href="#reply" class="reply">
+                       @* <a href="#reply" class="reply">
                             Yanıtla
-                        </a>
+                        </a>*@
                     </li>
                 </ul>
                 <p>
