--- a/TraversalProject/Views/_ViewImports.cshtml
+++ b/TraversalProject/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using TraversalProject.Models
 @using EntityLayer.Concrete
 @using TraversalProject.Areas.Member.Models
+@using DTOLayer.DTOs.ContactDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
