Rol atama işlemleri - 92

--- a/TraversalProject/Areas/Admin/Views/Role/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Role/Index.cshtml
@@ -34,5 +34,9 @@ else
         <span>Herhangi bir rol bulunamadı.</span>
     </div>
 }
-<a href="/Admin/Role/CreateRole/" class="btn btn-outline-primary">Yeni Rol Girişi</a>
+<div class="btn-group">
+    <a href="/Admin/Role/CreateRole/" class="btn btn-outline-primary">Yeni Rol Girişi</a> <br />
+    <a href="/Admin/Role/UserList/" class="btn btn-outline-dark">Kullanıcı Rolleri</a>
+</div>
+
 
