Member dashboard düzenleme - 93(tekrar yapıldı)

--- a/TraversalProject/Views/MemberLayoutPartial/_Navbar2Partial.cshtml
+++ b/TraversalProject/Views/MemberLayoutPartial/_Navbar2Partial.cshtml
@@ -5,16 +5,11 @@
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
                 <div class="input-group">
                     <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
-                    <input type="text" class="form-control" placeholder="Type here...">
+                    <input type="text" class="form-control" placeholder="Aranacak kelime...">
                 </div>
             </div>
             <ul class="navbar-nav  justify-content-end">
-                <li class="nav-item d-flex align-items-center">
-                    <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
-                        <i class="fa fa-user me-sm-1"></i>
-                        <span class="d-sm-inline d-none">Sign In</span>
-                    </a>
-                </li>
+
                 <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
                     <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                         <div class="sidenav-toggler-inner">
@@ -101,6 +96,13 @@
                             </a>
                         </li>
                     </ul>
+                </li>
+
+                <li class="nav-item d-flex align-items-center">
+                    <a href="/Login/LogOut/" class="nav-link text-body font-weight-bold px-0">
+                        <i class="fa fa-close me-sm-1" style="margin-left:5px;"></i>
+                        <span class="d-sm-inline d-none">Çıkış Yap</span>
+                    </a>
                 </li>
             </ul>
         </div>
