--- a/TraversalProject/Views/Shared/Components/_MemberLayoutHead/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberLayoutHead/Default.cshtml
@@ -9,7 +9,8 @@
     <link rel="apple-touch-icon" href="~/member/theme-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="~/member/theme-assets/images/ico/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i%7CComfortaa:300,400,700" rel="stylesheet">
-    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet">
+  @*  <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet">*@
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- BEGIN VENDOR CSS-->
     <link rel="stylesheet" type="text/css" href="~/member/theme-assets/css/vendors.css">
     <!-- END VENDOR CSS-->
