--- a/TraversalProject/Views/Shared/Components/_MemberLayoutHeaderContent/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberLayoutHeaderContent/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="content-header row">
+﻿@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
+<div class="content-header row">
     <div class="content-header-left col-md-4 col-12 mb-2">
         <h3 class="content-header-title">Traversal</h3>
     </div>
@@ -7,10 +8,10 @@
             <div class="breadcrumb-wrapper mr-1">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                        <a href="index.html">Üye</a>
+                        <a href="#"> @localizer["Üye"]</a>
                     </li>
                     <li class="breadcrumb-item active">
-                        Üye Paneli
+                        @localizer["Üye Paneli"]
                     </li>
                 </ol>
             </div>
