--- a/TraversalProject/Views/Shared/Components/_MemberLayoutSidebar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberLayoutSidebar/Default.cshtml
@@ -25,7 +25,7 @@
                 <a href="/Member/Reservation/MyOldReservation/"><i class="ft-clock"></i><span class="menu-title" data-i18n="">Geçmiş Rezv.</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Reservation/MyApprovalReservation/"><i class="ft-cloud"></i><span class="menu-title" data-i18n="">Onay Bekleyen Rezv.</span></a>
+                <a href="/Member/Reservation/MyApprovalReservation/"><i class="ft-cloud"></i><span class="menu-title" data-i18n="">Onay Bekleyen R.</span></a>
             </li>
             <li class=" nav-item">
                 <a href="/Member/Reservation/NewReservation/"><i class="ft-navigation"></i><span class="menu-title" data-i18n="">Yeni Rezervasyon</span></a>
