--- a/TraversalProject/Views/Login/SignIn.cshtml
+++ b/TraversalProject/Views/Login/SignIn.cshtml
@@ -68,7 +68,7 @@
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							Şifremi Unuttum
+							<a href="/PasswordChange/ForgetPassword/">Şifremi Unuttum</a>
 						</span>
 						@*<a class="txt2" href="#">
 							Username / Password?
