Yetkilendirme ve proje ekran görüntüleri

--- a/TraversalProject/Views/Admin/PartialFooter.cshtml
+++ b/TraversalProject/Views/Admin/PartialFooter.cshtml
@@ -6,10 +6,10 @@
             <script>
                 document.write(new Date().getFullYear());
             </script>
-            , made with ❤️ by
+             Traversal ❤️ by
             <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">ThemeSelection</a>
         </div>
-        <div>
+@*        <div>
             <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
             <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
 
@@ -20,7 +20,7 @@
             <a href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
                target="_blank"
                class="footer-link me-4">Support</a>
-        </div>
+        </div>*@
     </div>
 </footer>
 <!-- / Footer -->
