--- a/TraversalProject/Views/Admin/PartialNavbar.cshtml
+++ b/TraversalProject/Views/Admin/PartialNavbar.cshtml
@@ -21,20 +21,20 @@
 
         <ul class="navbar-nav flex-row align-items-center ms-auto">
             <!-- Place this tag where you want the button to render. -->
-            <li class="nav-item lh-1 me-3">
+     @*       <li class="nav-item lh-1 me-3">
                 <a class="github-button"
                    href="https://github.com/themeselection/sneat-html-admin-template-free"
                    data-icon="octicon-star"
                    data-size="large"
                    data-show-count="true"
                    aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-            </li>
+            </li>*@
 
             <!-- User -->
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img src="~/sneat-1.0.0/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                        <img src="~/UserImages/b944ccd7-f89e-450a-b474-106f04b74486.png" class="w-px-30 h-auto rounded-circle" />
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -43,7 +43,7 @@
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
-                                        <img src="~/sneat-1.0.0/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                        <img src="~/sneat-1.0.0/assets/img/avatars/1.png"  class="w-px-30 h-auto rounded-circle" />
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
