--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -66,7 +66,7 @@
             <div data-i18n="Analytics">Duyurular</div>
         </a>
     </li>
-    <li class="menu-item">
+@*    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
             <div data-i18n="Analytics">Öne Çıkanlar</div>
@@ -77,7 +77,7 @@
             <i class="menu-icon tf-icons bx bx-navigation"></i>
             <div data-i18n="Analytics">Referanslar</div>
         </a>
-    </li>
+    </li>*@
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-abacus"></i>
@@ -96,12 +96,12 @@
             <div data-i18n="Analytics">Mail Listesi</div>
         </a>
     </li>
-    <li class="menu-item">
+@*    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-bookmark-alt"></i>
             <div data-i18n="Analytics">Öne Çıkanlar 2</div>
         </a>
-    </li>
+    </li>*@
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-key"></i>
@@ -115,13 +115,19 @@
         </a>
     </li>
     <li class="menu-item">
-        <a href="index.html" class="menu-link">
+        <a href="/Member/Dashboard/MemberDashboard" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-ghost"></i>
+            <div data-i18n="Analytics">Üye Paneli</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Default/Index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-exit"></i>
             <div data-i18n="Analytics">Siteye git</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="index.html" class="menu-link">
+        <a href="/Login/LogOut/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-exit"></i>
             <div data-i18n="Analytics">Çıkış yap</div>
         </a>
