Ef bağımlılıklarının kaldırılması,  admin navbar, admin comment

--- a/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
@@ -20,21 +20,11 @@
         <!-- /Search -->
 
         <ul class="navbar-nav flex-row align-items-center ms-auto">
-            <!-- Place this tag where you want the button to render. -->
-     @*       <li class="nav-item lh-1 me-3">
-                <a class="github-button"
-                   href="https://github.com/themeselection/sneat-html-admin-template-free"
-                   data-icon="octicon-star"
-                   data-size="large"
-                   data-show-count="true"
-                   aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-            </li>*@
-
             <!-- User -->
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img src="~/UserImages/b944ccd7-f89e-450a-b474-106f04b74486.png" class="w-px-30 h-auto rounded-circle" />
+                        <img src="~/UserImages/@ViewBag.image" class="w-px-30 h-auto rounded-circle" />
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -43,11 +33,11 @@
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
-                                        <img src="~/sneat-1.0.0/assets/img/avatars/1.png"  class="w-px-30 h-auto rounded-circle" />
+                                        <img src="~/UserImages/@ViewBag.image" class="w-px-30 h-auto rounded-circle" />
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
-                                    <span class="fw-semibold d-block">John Doe</span>
+                                    <span class="fw-semibold d-block">@ViewBag.name @ViewBag.surname</span>
                                     <small class="text-muted">Admin</small>
                                 </div>
                             </div>
@@ -57,33 +47,18 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
-                            <i class="bx bx-user me-2"></i>
-                            <span class="align-middle">My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item" href="/Admin/Profile/Index/">
                             <i class="bx bx-cog me-2"></i>
-                            <span class="align-middle">Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">
-                            <span class="d-flex align-items-center align-middle">
-                                <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                                <span class="flex-grow-1 align-middle">Billing</span>
-                                <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                            </span>
+                            <span class="align-middle">Profilim</span>
                         </a>
                     </li>
                     <li>
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="auth-login-basic.html">
+                        <a class="dropdown-item" href="/Login/LogOut/">
                             <i class="bx bx-power-off me-2"></i>
-                            <span class="align-middle">Log Out</span>
+                            <span class="align-middle">Çıkış Yap</span>
                         </a>
                     </li>
                 </ul>
