--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -7,6 +7,12 @@
         </a>
     </li>
      <li class="menu-item">
+        <a href="/Admin/Profile/Index" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-edit"></i>
+            <div data-i18n="Analytics">Profil Ayarları</div>
+        </a>
+    </li>
+     <li class="menu-item">
         <a href="/Admin/Comment/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-comment"></i>
             <div data-i18n="Analytics">Yorumlar</div>
