--- a/TraversalProject/Areas/Member/Views/Comment/Index.cshtml
+++ b/TraversalProject/Areas/Member/Views/Comment/Index.cshtml
@@ -1,8 +1,65 @@
-﻿
+﻿@model List<Comment>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_MemberLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Tur Rotalarına Yapılan Yorumlar</h4>
+                <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
+                <div class="heading-elements">
+                    <ul class="list-inline mb-0">
+                        <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
+                        <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
+                        <li><a data-action="expand"><i class="ft-maximize"></i></a></li>
+                        <li><a data-action="close"><i class="ft-x"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card-content collapse show">
+                <div class="card-body">
+                    <p class="card-text">Tur Rotalarına yaptığınız yorumları aşağıdan görebilirsiniz.</p>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th hidden>#</th>
+                                    <th>Rota</th>
+                                    <th>Yorum tarihi</th>
+                                    <th>Yorum</th>
+                                    <th>Aktif/Pasif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td hidden>@item.CommentID</td>
+                                        <td>@item.Destination.City</td>
+                                        <td>@item.CommentDate</td>
+                                        <td>@item.CommentContent</td>
+                                        <td>
+                                            @if(item.CommentState==true)
+                                            {
+                                                <a href="/Member/Comment/PasifComment/@item.CommentID" class="btn btn-outline-danger">Pasif Yap</a>
+                                            }
+                                            else
+                                            {
+                                                <a href="/Member/Comment/ActiveComment/@item.CommentID" class="btn btn-outline-success">Aktif Yap</a>
+                                            }
+                                        </td>
+                                    </tr>
+                                }
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
