Rezervasyon işlemleri tamamlandı

--- a/TraversalProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
+++ b/TraversalProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="card-content collapse show">
                 <div class="card-body">
-                    <p class="card-text">Web Sitemiz Traversal üzerinde yapmış olduğunuz onay bekleyen rezervasyon listenize aşağıdan erişebilirsiniz. Rehberlerimiz ve diğer çalışanlarımız en kısa sürede sizlere dönüş yapacaktı</p>
+                    <p class="card-text">Web Sitemiz Traversal üzerinde yapmış olduğunuz onay bekleyen rezervasyon listenize aşağıdan erişebilirsiniz. Rehberlerimiz ve diğer çalışanlarımız en kısa sürede sizlere dönüş yapacaktır.</p>
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
