--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -37,9 +37,27 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/Admin/Reservation/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-restaurant"></i>
+            <div data-i18n="Analytics">Rezervasyonlar</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="/Admin/Guide/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-help-circle"></i>
             <div data-i18n="Analytics">Rehberlerimiz</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/Role/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-key"></i>
+            <div data-i18n="Analytics">Rol İşlemleri</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/Mail/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-mail-send"></i>
+            <div data-i18n="Analytics">Mail Gönder</div>
         </a>
     </li>
     <li class="menu-item">
@@ -54,12 +72,7 @@
             <div data-i18n="Analytics">Excel Raporları</div>
         </a>
     </li>
-    <li class="menu-item">
-        <a href="/Admin/Mail/Index/" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-mail-send"></i>
-            <div data-i18n="Analytics">Mail Gönder</div>
-        </a>
-    </li>
+
     <li class="menu-item">
         <a href="/Admin/City/Index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-star"></i>
@@ -70,6 +83,12 @@
         <a href="/Admin/Announcement/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-notification"></i>
             <div data-i18n="Analytics">Duyurular</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="index.html" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-abacus"></i>
+            <div data-i18n="Analytics">Alt Hakkında</div>
         </a>
     </li>
 @*    <li class="menu-item">
@@ -84,42 +103,14 @@
             <div data-i18n="Analytics">Referanslar</div>
         </a>
     </li>*@
-    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-abacus"></i>
-            <div data-i18n="Analytics">Alt Hakkında</div>
-        </a>
-    </li>
-    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-restaurant"></i>
-            <div data-i18n="Analytics">Rezervasyonlar</div>
-        </a>
-    </li>
-    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bxl-mailchimp"></i>
-            <div data-i18n="Analytics">Mail Listesi</div>
-        </a>
-    </li>
+
 @*    <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-bookmark-alt"></i>
             <div data-i18n="Analytics">Öne Çıkanlar 2</div>
         </a>
     </li>*@
-    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-key"></i>
-            <div data-i18n="Analytics">Şifre İşlemleri</div>
-        </a>
-    </li>
-    <li class="menu-item">
-        <a href="/Admin/Role/Index/" class="menu-link">
-            <i class="menu-icon tf-icons bx bxs-thermometer"></i>
-            <div data-i18n="Analytics">Rol İşlemleri</div>
-        </a>
-    </li>
+
     <li class="menu-item">
         <a href="/Member/Dashboard/MemberDashboard" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
