--- a/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div class="d-lg-block d-none mr-3">
-                <a href="#" class="btn btn-style btn-secondary">Rezervasyon Yap</a>
+                <a href="/Member/Reservation/NewReservation/" class="btn btn-style btn-secondary">Rezervasyon Yap</a>
             </div>
 
             <div class="w3l_header_right">
